# abeam_presentation_analysis

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json
notebooks/: aiueo_formant.ipynb  calc_features.ipynb  logistic_firth.ipynb  logistic_firth_further_analysis.ipynb  logistic_firth_r.ipynb  preprocess.ipynb  sim_estimation.ipynb
notebooks/paper/: calc_features.ipynb  logistic_firth_r.ipynb
notebooks/simulation/: firth_lr.ipynb
src/: __init__.py  datahandler.py  fugashi_utils.py  presentation.py
