[project]
name = "default"
version = "0.1.0"
description = "This repository contains configurations to set up a Python development environment using VSCode's Dev Container feature. The environment includes uv and Ruff."

authors = [{ name = "shtmjp" }]
maintainers = [{ name = "shtmjp" }]

requires-python = ">=3.9"
readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.5",
    "firthlogist>=0.5.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "scipy>=1.13.1",
    "matplotlib>=3.9.2",
    "japanize-matplotlib>=1.1.3",
    "tqdm>=4.66.5",
    "openai-whisper>=20240930",
    "stable-ts>=2.17.4",
    "fugashi[unidic]>=1.3.2",
    "demucs>=4.0.1",
    "ffmpeg-python>=0.2.0",
    "praat-parselmouth>=0.4.4",
    "keyboard>=0.13.5",
    "statsmodels>=0.14.4",
    "python-dotenv>=1.0.1",
    "librosa>=0.10.2.post1",
    "seaborn>=0.13.2",
    "rpy2>=3.5.16",
    "pandera>=0.20.4",
    "joblib>=1.4.2",
]

[tool.uv]
dev-dependencies = [
    "ipywidgets>=8.1.5",
    "pip-licenses>=5.0.0",
    "pre-commit>=4.0.0",
    "pyright>=1.1.383",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
]

[tool.uv.sources]
stable-ts = { git = "https://github.com/jianfch/stable-ts.git" }
